Fixed tag cloud line spacing.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -137,6 +137,7 @@ ul#ticklers {
 
 ul#ticklers li {
 	display: inline;
+	line-height: 2em;
 }
 
 
